добавлена обработка ошибок и исключений.